--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 1em 2em;
+  /* padding: 1em 2em; */
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -55,13 +55,9 @@ body:before {
 
 .container {
   background-color: var(--theme-bg);
-  max-width: 1240px;
-  max-height: 900px;
-  height: 95vh;
   display: flex;
   overflow: hidden;
   width: 100%;
-  border-radius: 20px;
   font-size: 15px;
   font-weight: 500;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
