--- a/style.css
+++ b/style.css
@@ -19,38 +19,13 @@ img {
   --body-color: #808191;
   --button-bg: #353340;
   --border-color: rgb(128 129 145 / 24%);
-  --video-bg: #252936;
+  --blog-bg: #252936;
   --delay: 0s;
 }
 
 body {
   font-family: var(--body-font);
   color: var(--body-color);
-  background-image: url("https://images.unsplash.com/photo-1445251836269-d158eaa028a6?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1951&q=80");
-  background-image: url(https://images.unsplash.com/photo-1520045892732-304bc3ac5d8e?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=1950&q=80);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-blend-mode: color-dodge;
-  background-color: rgba(18, 21, 39, 0.86);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  /* padding: 1em 2em; */
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-body:before {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(163deg, #1f1d2b 21%, rgba(31, 29, 43, 0.3113620448) 64%);
-  opacity: 0.4;
-  content: "";
 }
 
 .container {
@@ -62,6 +37,7 @@ body:before {
   font-weight: 500;
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
   position: relative;
+  height: 100vh;
 }
 
 .sidebar {
@@ -451,11 +427,11 @@ body:before {
   background-color: #fff;
   margin: 0 6px;
 }
-.seperate.video-seperate {
+.seperate.blog-seperate {
   background-color: var(--body-color);
 }
 
-.videos {
+.blogs {
   display: grid;
   width: 100%;
   grid-template-columns: repeat(4, 1fr);
@@ -463,47 +439,47 @@ body:before {
   grid-row-gap: 20px;
 }
 @media screen and (max-width: 980px) {
-  .videos {
+  .blogs {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-.video {
+.blog {
   position: relative;
-  background-color: var(--video-bg);
+  background-color: var(--blog-bg);
   border-radius: 20px;
   overflow: hidden;
   transition: 0.4s;
 }
-.video-wrapper {
+.blog-wrapper {
   position: relative;
 }
-.video-name {
+.blog-name {
   color: #fff;
   font-size: 16px;
   line-height: 1.4em;
   padding: 12px 20px 0;
   overflow: hidden;
-  background-color: var(--video-bg);
+  background-color: var(--blog-bg);
   z-index: 9;
   position: relative;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-.video-view {
+.blog-view {
   font-size: 12px;
   padding: 12px 20px 20px;
-  background-color: var(--video-bg);
+  background-color: var(--blog-bg);
   position: relative;
 }
-.video-by {
+.blog-by {
   transition: 0.3s;
   padding: 20px 20px 0px;
   display: inline-flex;
   position: relative;
 }
-.video-by:before {
+.blog-by:before {
   content: "";
   background-color: #22b07d;
   width: 6px;
@@ -513,10 +489,10 @@ body:before {
   top: 26px;
   right: 5px;
 }
-.video-by.offline:before {
+.blog-by.offline:before {
   background-color: #ff7551;
 }
-.video-time {
+.blog-time {
   position: absolute;
   background: rgba(21, 13, 13, 0.44);
   color: rgba(255, 255, 255, 0.85);
@@ -527,35 +503,35 @@ body:before {
   z-index: 1;
   right: 8px;
 }
-.video:hover video {
+.blog:hover blog {
   transform: scale(1.6);
   transform-origin: center;
 }
-.video:hover .video-time {
+.blog:hover .blog-time {
   display: none;
 }
-.video:hover .video-author {
+.blog:hover .blog-author {
   bottom: -65px;
   transform: scale(0.6);
   right: -3px;
   z-index: 10;
 }
-.video:hover .video-by {
+.blog:hover .blog-by {
   opacity: 0;
 }
-.video-author {
+.blog-author {
   position: absolute;
   right: 10px;
   transition: 0.4s;
   bottom: -25px;
 }
-.video-author svg {
+.blog-author svg {
   background-color: #0aa0f7;
   color: #fff;
-  border-color: var(--video-bg);
+  border-color: var(--blog-bg);
 }
 
-video {
+blog {
   max-width: 100%;
   width: 100%;
   border-radius: 20px 20px 0 0;
@@ -567,24 +543,7 @@ video {
 .stream-area {
   display: none;
 }
-@media screen and (max-width: 940px) {
-  .stream-area {
-    flex-direction: column;
-  }
-  .stream-area .video-stream {
-    width: 100%;
-  }
-  .stream-area .chat-stream {
-    margin-left: 0;
-    margin-top: 30px;
-  }
-  .stream-area .video-js.vjs-fluid {
-    min-height: 250px;
-  }
-  .stream-area .msg__content {
-    max-width: 100%;
-  }
-}
+
 
 .show .stream-area {
   display: flex;
@@ -592,21 +551,60 @@ video {
 .show .main-header,
 .show .main-blogs,
 .show .small-header,
-.show .videos {
+.show .blogs {
   display: none;
 }
 
-.video-stream {
+@media screen and (max-width: 1000px) {
+
+  .stream-area {
+    flex-direction: column !important;
+  }
+  .stream-area .blog-stream {
+    width: 100%;
+  }
+  .stream-area .chat-stream {
+    margin-left: 0;
+    margin-top: 30px;
+  }
+  .stream-area .blog-js.vjs-fluid {
+    min-height: 250px;
+  }
+  .stream-area .msg__content {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 940px) {
+  .show .stream-area {
+    flex-direction: column !important;
+  }
+  .show .stream-area .blog-stream {
+    width: 100%;
+  }
+  .show .stream-area .chat-stream {
+    margin-left: 0;
+    margin-top: 30px;
+  }
+  .show .stream-area .blog-js.vjs-fluid {
+    min-height: 250px;
+  }
+  .show .stream-area .msg__content {
+    max-width: 100%;
+  }
+}
+
+.blog-stream {
   width: 65%;
   -o-object-fit: cover;
      object-fit: cover;
   transition: 0.3s;
 }
-.video-stream:hover .video-js .vjs-big-play-button {
+.blog-stream:hover .blog-js .vjs-big-play-button {
   opacity: 1;
 }
 
-.video-p {
+.blog-p {
   margin-right: 12px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -616,60 +614,59 @@ video {
   top: 0;
   left: 0;
 }
-.video-p .author-img {
+.blog-p .author-img {
   border: 0;
 }
-.video-p-wrapper {
+.blog-p-wrapper {
   display: flex;
   align-items: center;
 }
-.video-p-wrapper .author-img {
+.blog-p-wrapper .author-img {
   border: 0;
 }
-.video-p-wrapper svg {
+.blog-p-wrapper svg {
   width: 20px;
   padding: 4px;
 }
 @media screen and (max-width: 650px) {
-  .video-p-wrapper {
+  .blog-p-wrapper {
     flex-direction: column;
   }
-  .video-p-wrapper .button-wrapper {
+  .blog-p-wrapper .button-wrapper {
     margin: 20px auto 0;
   }
-  .video-p-wrapper .video-p-detail {
+  .blog-p-wrapper .blog-p-detail {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  .video-p-wrapper .video-p {
+  .blog-p-wrapper .blog-p {
     margin-right: 0;
   }
 }
-.video-p-sub {
+.blog-p-sub {
   font-size: 12px;
 }
-.video-p-title {
+.blog-p-title {
   font-size: 24px;
   color: #fff;
   line-height: 1.4em;
   margin: 16px 0 20px;
 }
-.video-p-subtitle {
+.blog-p-subtitle {
   font-size: 14px;
   line-height: 1.5em;
-  max-width: 60ch;
 }
-.video-p-subtitle + .video-p-subtitle {
+.blog-p-subtitle + .blog-p-subtitle {
   margin-top: 16px;
 }
-.video-p-name {
+.blog-p-name {
   margin-bottom: 8px;
   color: #fff;
   display: flex;
   align-items: center;
 }
-.video-p-name:after {
+.blog-p-name:after {
   content: "";
   width: 6px;
   height: 6px;
@@ -678,11 +675,11 @@ video {
   margin-left: 8px;
   display: inline-block;
 }
-.video-p-name.offline:after {
+.blog-p-name.offline:after {
   background-color: #ff7551;
 }
 
-.video-content {
+.blog-content {
   width: 100%;
 }
 
@@ -717,11 +714,11 @@ video {
   margin-left: 16px;
 }
 
-.video-stats {
+.blog-stats {
   margin-left: 30px;
 }
 
-.video-detail {
+.blog-detail {
   display: flex;
   margin-top: 30px;
   width: 100%;
@@ -903,7 +900,7 @@ video {
   -webkit-box-orient: vertical;
 }
 
-.video-js .vjs-control-bar {
+.blog-js .vjs-control-bar {
   display: flex;
   align-items: center;
 }
@@ -912,7 +909,7 @@ video {
   background-size: 150%;
 }
 
-.video-js .vjs-control-bar {
+.blog-js .vjs-control-bar {
   width: 100%;
   position: absolute;
   bottom: 14px;
@@ -926,16 +923,16 @@ video {
   background-color: rgba(43, 51, 63, 0.7);
 }
 @media screen and (max-width: 625px) {
-  .video-js .vjs-control-bar {
+  .blog-js .vjs-control-bar {
     padding-left: 0;
   }
 }
 
-.video-js:hover .vjs-big-play-button {
+.blog-js:hover .vjs-big-play-button {
   background-color: rgba(43, 51, 63, 0.5);
 }
 
-.video-js .vjs-big-play-button {
+.blog-js .vjs-big-play-button {
   transition: 0.3s;
   opacity: 0;
   border: 0;
@@ -943,7 +940,7 @@ video {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.video-js .vjs-big-play-button:hover {
+.blog-js .vjs-big-play-button:hover {
   background-color: rgba(43, 51, 63, 0.7);
   border-color: transparent;
 }
@@ -978,12 +975,12 @@ video {
   top: 4px;
 }
 
-.video-js .vjs-control:before,
-.video-js .vjs-time-control {
+.blog-js .vjs-control:before,
+.blog-js .vjs-time-control {
   line-height: 40px;
 }
 
-.video-js .vjs-tech {
+.blog-js .vjs-tech {
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -998,7 +995,7 @@ button.vjs-play-control.vjs-control.vjs-button {
 }
 
 .vjs-icon-fullscreen-enter:before,
-.video-js .vjs-fullscreen-control:before {
+.blog-js .vjs-fullscreen-control:before {
   content: "";
   position: absolute;
   display: block;
@@ -1018,11 +1015,11 @@ button.vjs-play-control.vjs-control.vjs-button {
   font-family: var(--body-font);
 }
 
-.video-js .vjs-playback-rate {
+.blog-js .vjs-playback-rate {
   width: 2.2em;
 }
 
-.video-js.vjs-fluid {
+.blog-js.vjs-fluid {
   border-radius: 20px;
   overflow: hidden;
   min-height: 414px;
@@ -1038,7 +1035,7 @@ button.vjs-play-control.vjs-control.vjs-button {
     width: 100%;
   }
 
-  .videos {
+  .blogs {
     grid-template-columns: 1fr;
   }
 
